footer bug squashed

--- a/src/App.scss
+++ b/src/App.scss
@@ -100,6 +100,7 @@ font-family: 'Dancing Script';
   line-height:24px;
   color:black !important;
   margin-top: 15vh;
+  text-align: center;
 }
 .site-footer hr
 {
@@ -132,12 +133,12 @@ font-family: 'Dancing Script';
 {
   padding-left:0;
   list-style:none;
-  text-align: right;
+  text-align: center;
 }
 .footer-links li
 {
   display:block;
-  text-align: right;
+  text-align: center;
 }
 .footer-links a
 {
